--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,11 @@
 
     <TextView
         android:id="@+id/textResult"
-        android:layout_width="113dp"
-        android:layout_height="28dp"
+        android:layout_width="191dp"
+        android:layout_height="37dp"
         android:text="RESULTADO:"
         android:textAlignment="center"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -39,7 +40,8 @@
         android:layout_height="144dp"
         android:text=""
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="40dp"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -53,7 +55,7 @@
         android:layout_height="52dp"
         android:text=""
         android:textAlignment="center"
-        android:textSize="10dp"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -77,8 +79,8 @@
 
     <Button
         android:id="@+id/botonComparar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="66dp"
         android:layout_marginTop="384dp"
         android:text="Comparar"
         app:layout_constraintEnd_toEndOf="parent"
