Last commit previo a la entrega

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,10 @@
         android:id="@+id/textCard1"
         android:layout_width="123dp"
         android:layout_height="90dp"
+        android:backgroundTint="@color/white"
         android:hint="Ingrese 1° Texto"
+        android:textColorHint="@color/hint"
+        android:textColor="@color/white"
         android:text=""
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,7 +70,10 @@
         android:id="@+id/textCard2"
         android:layout_width="123dp"
         android:layout_height="90dp"
+        android:backgroundTint="@color/white"
         android:hint="Ingrese 2° Texto"
+        android:textColorHint="@color/hint"
+        android:textColor="@color/white"
         android:text=""
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,10 +86,10 @@
         android:id="@+id/botonComparar"
         android:layout_width="140dp"
         android:layout_height="66dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="444dp"
         android:text="Comparar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
