--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#22222222</color>
+    <color name="hint">#CCCCCCCC</color>
+    <color name="colorVerde">#00FF00</color>
+    <color name="colorRojo">#FF0000</color>
 </resources>
